@@ -1,6 +1,7 @@
 package com.borsaistanbul.stockvaluation.business.valuation;
 
-import com.borsaistanbul.stockvaluation.client.TechnicalDataService;
+import com.borsaistanbul.stockvaluation.client.GetCurrentPriceResponse;
+import com.borsaistanbul.stockvaluation.client.TechnicalDataClient;
 import com.borsaistanbul.stockvaluation.dto.entity.ValuationInfo;
 import com.borsaistanbul.stockvaluation.dto.model.ResponseData;
 import com.borsaistanbul.stockvaluation.repository.CompanyInfoRepository;
@@ -12,43 +13,40 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
 
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.anyString;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class ValuationBusinessImplTest {
 
     @Mock
     private CompanyInfoRepository companyInfoRepository;
-    @Autowired
+
+    @Mock
     ValuationInfoRepository valuationInfoRepository;
-    @Autowired
-    TechnicalDataService technicalDataService;
+
+    @Mock
+    TechnicalDataClient technicalDataClient;
+
     ValuationBusinessImpl valuationBusiness;
     String industry;
     List<String> tickerList;
     ValuationInfo valuationInfo1;
-    HashMap<String, Double> priceInfoHashMap;
+    GetCurrentPriceResponse getCurrentPriceResponse;
 
     @BeforeEach
     void init() {
-        companyInfoRepository = mock(CompanyInfoRepository.class);
-        valuationInfoRepository = mock(ValuationInfoRepository.class);
-        technicalDataService = mock(TechnicalDataService.class);
 
-        valuationBusiness = new ValuationBusinessImpl(companyInfoRepository, valuationInfoRepository, technicalDataService);
+        valuationBusiness = new ValuationBusinessImpl(companyInfoRepository, valuationInfoRepository, technicalDataClient);
         industry = "Otomotiv";
-
-        priceInfoHashMap = new HashMap<>();
-        priceInfoHashMap.put("price", 100.0);
 
         tickerList = new ArrayList<>();
         tickerList.add("FROTO");
@@ -62,13 +60,15 @@ class ValuationBusinessImplTest {
         valuationInfo1.setInitialCapital(BigDecimal.TEN);
         valuationInfo1.setAnnualEbitda(BigDecimal.TEN);
         valuationInfo1.setAnnualSales(BigDecimal.TEN);
-        valuationInfo1.setTtmNetProfit(BigDecimal.TEN);
-        valuationInfo1.setPrevTtmNetProfit(new BigDecimal(5));
+        valuationInfo1.setAnnualNetProfit(BigDecimal.TEN);
+        valuationInfo1.setPrevYearNetProfit(new BigDecimal(5));
         valuationInfo1.setNetDebt(BigDecimal.TEN);
         valuationInfo1.setTotalAssets(BigDecimal.TEN);
         valuationInfo1.setLongTermLiabilities(BigDecimal.TEN);
         valuationInfo1.setShortTermLiabilities(BigDecimal.TEN);
 
+        getCurrentPriceResponse = new GetCurrentPriceResponse();
+        getCurrentPriceResponse.setPrice(10.0);
     }
 
     @Test
@@ -77,29 +77,27 @@ class ValuationBusinessImplTest {
         when(companyInfoRepository.findTickerByIndustry(anyString())).thenReturn(tickerList);
         when(valuationInfoRepository.findAllByTicker(anyString())).thenReturn(Optional.of(valuationInfo1));
         when(companyInfoRepository.findCompanyNameByTicker(anyString())).thenReturn("TEST_COMPANY");
-        when(technicalDataService.fetchTechnicalData(anyString())).thenReturn(priceInfoHashMap);
+        when(technicalDataClient.getCurrentPrice(anyString())).thenReturn(ResponseEntity.ok(getCurrentPriceResponse));
 
         List<ResponseData> responseDataList = valuationBusiness.business(industry);
 
-        Assertions.assertNotNull(responseDataList.get(0));
+        Assertions.assertNotNull(responseDataList.getFirst());
 
     }
 
-    @Test
     @SneakyThrows
     void businessTestValuationInfoNotFound() {
 
         when(companyInfoRepository.findTickerByIndustry(anyString())).thenReturn(tickerList);
         when(companyInfoRepository.findCompanyNameByTicker(anyString())).thenReturn("TEST_COMPANY");
-        when(technicalDataService.fetchTechnicalData(anyString())).thenReturn(priceInfoHashMap);
+        when(technicalDataClient.getCurrentPrice(anyString())).thenReturn(ResponseEntity.ok(getCurrentPriceResponse));
 
-        // TODO -> You have to mock the URL so it shouldn't go to FinTables actually.
+        // TODO -> You have to mock the URL so it shouldn't actually go to FinTables.
         when(valuationInfoRepository.save(any(ValuationInfo.class))).thenReturn(null);
         when(valuationInfoRepository.findAllByTicker(anyString())).thenReturn(Optional.empty());
 
         List<ResponseData> responseDataList = valuationBusiness.business(industry);
-        Assertions.assertNotNull(responseDataList.get(0));
+        Assertions.assertNotNull(responseDataList.getFirst());
 
     }
-
 }
